# perceptive_locomotion

./: README.md
LIP_demo/: LIPM_2D.py  LIPM_3D.py  LIPM_Planner.py  README.md  demo.py  demo_3D.py  double_legs.py  lip2d.tldr  lip3d_step_planning_new.py  lip_step_planning.py  lip_step_planning_new.py  single_leg.py  step_path_planning.py
drake_controller/: BalanceController.py  README.md  demo.py  spot.urdf  stand.py  trot.py
local_grid/: CMakeLists.txt  package.xml
local_grid/include/: backward.hpp  raycast_ring_buffer.h  ring_buffer_base.h
local_grid/src/: grid_node.cpp
peac/: CMakeLists.txt  nodelet_plugin.xml  package.xml  plane_fitter_pcd.ini
peac/cfg/: peac_params.cfg
peac/cpp/: plane_fitter.cpp
peac/include/: AHCPlaneFitter.hpp  AHCPlaneSeg.hpp  AHCUtils.hpp
peac/launch/: peac_test.launch  pic_replay_peac.launch  read_form_files_and_peac.launch  replay_peac.launch
peac/src/: plane_fitter_pcd.cpp  plane_fitter_ros.cpp
peac_ros/: CMakeLists.txt  package.xml
peac_ros/include/peac/: AHCParamSet.hpp  AHCPlaneFitter.hpp  AHCPlaneSeg.hpp  DisjointSet.hpp  eig33sym.hpp
peac_ros/src/: demo_peac.cpp
plane_msg/: CMakeLists.txt  package.xml
plane_msg/msg/: Plane.msg  VecPlane.msg
read_pub_cloud/: CMakeLists.txt  package.xml
read_pub_cloud/launch/: test.launch
read_pub_cloud/src/: main.cpp
realsense-ros/realsense2_camera/launch/: rs_camera.launch  rs_d400_and_t265.launch  rs_stair.launch
stair_info_msg/: CMakeLists.txt  package.xml
stair_info_msg/msg/: stair_info.msg
stair_modeling/: CMakeLists.txt  nodelet_plugin.xml  package.xml
stair_modeling/cfg/: stair_modeling_params.cfg
stair_modeling/include/: common.h
stair_modeling/include/stair_modeling/: Stair.hpp  StairPerception.hpp  viewer_custom_func.h
stair_modeling/launch/: modeling.launch  pclseg_stair_modeling.launch  peac_stair_modeling.launch  pic_replay_pclseg_modeling.launch  pic_replay_peac_modeling.launch  read_pcl_modeling.launch  read_peac_modeling.launch  readref_seg_modeling.launch  replay_pclseg_modeling.launch  replay_peac_modeling.launch
stair_modeling/src/: StairPerception.cpp  stair_modeling.cpp  viewer_custom_func.cpp
stair_modeling_ros/: CMakeLists.txt  package.xml
stair_modeling_ros/include/peac/: AHCParamSet.hpp  AHCPlaneFitter.hpp  AHCPlaneSeg.hpp  AHCTypes.hpp  eig33sym.hpp
stair_modeling_ros/include/stair_modeling/: Stair.hpp  StairModeling.hpp  StairPerception.hpp  common.h
stair_modeling_ros/src/: stair_modeling_node.cpp
